temp/lmgc90_dev/src/ChiPy/shared/wrap_parameters.h

 /**
  * @fn int parameters_getPhysicTypeId(char* string_in)
  * @brief Get the id a body type from its name
  *
  * @cond PYDOC
  * usage i_param = parameters_getPhysicTypeId(bodyName)
  * @param[in] bodyName (string): body type name
  * @return    i_param (int)    : body type parameter
  * @endcond
  *
  * @cond CDOC
  * @param[in] string_in (char *) : body type name
  * @return    i_param   (int)    : body type parameter
  * @endcond
  */
  extern "C" int parameters_getPhysicTypeId(char* cvalue1);
 /**
  * @fn void parameters_getPhysicTypeNames(char** string_vector, int* vector_size, int* string_size)
  * @brief Get the list of body types
  *
  * @cond PYDOC
  * usage bodyNames = parameters_getPhysicTypeName()
  * @return bodyName (string array) : body type names
  * @endcond
  *
  * @cond CDOC
  * @param[out] string_vector (char **) : body type name
  * @param[out] vector_size (int * ) : size of string_vector
  * @param[out] string_size (int * ) : size of each string
  * @endcond
  */
  extern "C" void parameters_getPhysicTypeNames(char** string_vector, int* vector_size, int* string_size);
 /**
  * @fn int parameters_getBodyModelId(char* string_in)
  * @brief Get the id a body model from its name
  *
  * @cond PYDOC
  * usage i_param = parameters_getBodyModelId(bodyName)
  * @param[in] bodyName (string): body model name
  * @return    i_param (int)    : body model parameter
  * @endcond
  *
  * @cond CDOC
  * @param[in] string_in (char *) : body model name
  * @return    i_param   (int)    : body model parameter
  * @endcond
  */
  extern "C" int parameters_getBodyModelId(char* cvalue1);
 /**
  * @fn void parameters_getBodyModelNames(char** string_vector, int* vector_size, int* string_size)
  * @brief Get the list of body types
  *
  * @cond PYDOC
  * usage bodyNames = parameters_getBodyModelName()
  * @return bodyName (string array) : body model names
  * @endcond
  *
  * @cond CDOC
  * @param[out] string_vector (char **) : body model name
  * @param[out] vector_size (int * ) : size of string_vector
  * @param[out] string_size (int * ) : size of each string
  * @endcond
  */
  extern "C" void parameters_getBodyModelNames(char** string_vector, int* vector_size, int* string_size);
 /**
  * @fn int parameters_getContactorId(char* string_in)
  * @brief Get the id a contactor from its name
  *
  * @cond PYDOC
  * usage i_param = parameters_getContactorId(bodyName)
  * @param[in] bodyName (string): contactor name
  * @return    i_param (int)    : contactor parameter
  * @endcond
  *
  * @cond CDOC
  * @param[in] string_in (char *) : contactor name
  * @return    i_param   (int)    : contactor parameter
  * @endcond
  */
  extern "C" int parameters_getContactorId(char* cvalue1);
 /**
  * @fn void parameters_getContactorNames(char** string_vector, int* vector_size, int* string_size)
  * @brief Get the list of contactors
  *
  * @cond PYDOC
  * usage bodyNames = parameters_getContactorName()
  * @return bodyName (string array) : contactor names
  * @endcond
  *
  * @cond CDOC
  * @param[out] string_vector (char **) : contactor name
  * @param[out] vector_size (int * ) : size of string_vector
  * @param[out] string_size (int * ) : size of each string
  * @endcond
  */
  extern "C" void parameters_getContactorNames(char** string_vector, int* vector_size, int* string_size);
 /**
  * @fn int parameters_getInteractionId(char* string_in)
  * @brief Get the id a interaction from its name
  *
  * @cond PYDOC
  * usage i_param = parameters_getInteractionId(bodyName)
  * @param[in] bodyName (string): interaction name
  * @return    i_param (int)    : interaction parameter
  * @endcond
  *
  * @cond CDOC
  * @param[in] string_in (char *) : interaction name
  * @return    i_param   (int)    : interaction parameter
  * @endcond
  */
  extern "C" int parameters_getInteractionId(char* cvalue1);
 /**
  * @fn void parameters_getInteractionNames(char** string_vector, int* vector_size, int* string_size)
  * @brief Get the list of interactions
  *
  * @cond PYDOC
  * usage bodyNames = parameters_getInteractionName()
  * @return bodyName (string array) : interaction names
  * @endcond
  *
  * @cond CDOC
  * @param[out] string_vector (char **) : interaction name
  * @param[out] vector_size (int * ) : size of string_vector
  * @param[out] string_size (int * ) : size of each string
  * @endcond
  */
  extern "C" void parameters_getInteractionNames(char** string_vector, int* vector_size, int* string_size);
 /**
  * @fn int parameters_getMatrixStorageId(char* string_in)
  * @brief Get the id a matrix storage from its name
  *
  * @cond PYDOC
  * usage i_param = parameters_getMatrixStorageId(bodyName)
  * @param[in] bodyName (string): matrix storage name
  * @return    i_param (int)    : matrix storage parameter
  * @endcond
  *
  * @cond CDOC
  * @param[in] string_in (char *) : matrix storage name
  * @return    i_param   (int)    : matrix storage parameter
  * @endcond
  */
  extern "C" int parameters_getMatrixStorageId(char* cvalue1);
 /**
  * @fn void parameters_getMatrixStorageNames(char** string_vector, int* vector_size, int* string_size)
  * @brief Get the list of matrix storages
  *
  * @cond PYDOC
  * usage bodyNames = parameters_getMatrixStorageName()
  * @return bodyName (string array) : matrix storage names
  * @endcond
  *
  * @cond CDOC
  * @param[out] string_vector (char **) : matrix storage name
  * @param[out] vector_size (int * ) : size of string_vector
  * @param[out] string_size (int * ) : size of each string
  * @endcond
  */
  extern "C" void parameters_getMatrixStorageNames(char** string_vector, int* vector_size, int* string_size);
 /**
  * @fn int parameters_getMatrixShapeId(char* string_in)
  * @brief Get the id a matrix shape from its name
  *
  * @cond PYDOC
  * usage i_param = parameters_getMatrixShapeId(bodyName)
  * @param[in] bodyName (string): matrix shape name
  * @return    i_param (int)    : matrix shape parameter
  * @endcond
  *
  * @cond CDOC
  * @param[in] string_in (char *) : matrix shape name
  * @return    i_param   (int)    : matrix shape parameter
  * @endcond
  */
  extern "C" int parameters_getMatrixShapeId(char* cvalue1);
 /**
  * @fn void parameters_getMatrixShapeNames(char** string_vector, int* vector_size, int* string_size)
  * @brief Get the list of matrix shapes
  *
  * @cond PYDOC
  * usage bodyNames = parameters_getMatrixShapeName()
  * @return bodyName (string array) : matrix shape names
  * @endcond
  *
  * @cond CDOC
  * @param[out] string_vector (char **) : matrix shape name
  * @param[out] vector_size (int * ) : size of string_vector
  * @param[out] string_size (int * ) : size of each string
  * @endcond
  */
  extern "C" void parameters_getMatrixShapeNames(char** string_vector, int* vector_size, int* string_size);
 /**
  * @fn int parameters_getGeneralizedCoordinatesId(char* string_in)
  * @brief Get the id a generalized coordinates from its name
  *
  * @cond PYDOC
  * usage i_param = parameters_getGeneralizedCoordinatesId(bodyName)
  * @param[in] bodyName (string): generalized coordinates name
  * @return    i_param (int)    : generalized coordinates parameter
  * @endcond
  *
  * @cond CDOC
  * @param[in] string_in (char *) : generalized coordinates name
  * @return    i_param   (int)    : generalized coordinates parameter
  * @endcond
  */
  extern "C" int parameters_getGeneralizedCoordinatesId(char* cvalue1);
 /**
  * @fn void parameters_getGeneralizedCoordinatesNames(char** string_vector, int* vector_size, int* string_size)
  * @brief Get the list of generalized coordinatess
  *
  * @cond PYDOC
  * usage bodyNames = parameters_getGeneralizedCoordinatesName()
  * @return bodyName (string array) : generalized coordinates names
  * @endcond
  *
  * @cond CDOC
  * @param[out] string_vector (char **) : generalized coordinates name
  * @param[out] vector_size (int * ) : size of string_vector
  * @param[out] string_size (int * ) : size of each string
  * @endcond
  */
  extern "C" void parameters_getGeneralizedCoordinatesNames(char** string_vector, int* vector_size, int* string_size);
 /**
  * @fn int parameters_getSurfaceEnergyStatusId(char* string_in)
  * @brief Get the id a surface energy status from its name
  *
  * @cond PYDOC
  * usage i_param = parameters_getSurfaceEnergyStatusId(bodyName)
  * @param[in] bodyName (string): surface energy status name
  * @return    i_param (int)    : surface energy status parameter
  * @endcond
  *
  * @cond CDOC
  * @param[in] string_in (char *) : surface energy status name
  * @return    i_param   (int)    : surface energy status parameter
  * @endcond
  */
  extern "C" int parameters_getSurfaceEnergyStatusId(char* cvalue1);
 /**
  * @fn void parameters_getSurfaceEnergyStatusNames(char** string_vector, int* vector_size, int* string_size)
  * @brief Get the list of surface energy statuss
  *
  * @cond PYDOC
  * usage bodyNames = parameters_getSurfaceEnergyStatusName()
  * @return bodyName (string array) : surface energy status names
  * @endcond
  *
  * @cond CDOC
  * @param[out] string_vector (char **) : surface energy status name
  * @param[out] vector_size (int * ) : size of string_vector
  * @param[out] string_size (int * ) : size of each string
  * @endcond
  */
  extern "C" void parameters_getSurfaceEnergyStatusNames(char** string_vector, int* vector_size, int* string_size);